--- a/docs/_sass/_mobile.scss
+++ b/docs/_sass/_mobile.scss
@@ -24,13 +24,13 @@
   }
   
 
-  // shourtcut
+  // shortcut
   // -------------------------
   .shortcut-wrap {
     padding: 10px 0;
   }
 
-  // swatichs
+  // swatches
   // -------------------------
 
   $color-chip-height: 50px;
