style: hover and ripple effect

--- a/docs/_sass/_mobile.scss
+++ b/docs/_sass/_mobile.scss
@@ -111,4 +111,18 @@
       }
     }
   }
+  // ripple effect
+  @keyframes ripple {
+    0% {
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    
+    100% {
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+  }
 }
