--- a/docs/_sass/_swatches.scss
+++ b/docs/_sass/_swatches.scss
@@ -62,6 +62,7 @@ $style-list: (
   height: 80px;
   border-radius: 2px;
   position: relative;
+  cursor: pointer;
 
   span {
     position: absolute;
@@ -70,6 +71,53 @@ $style-list: (
     margin: 10px;
     font-size: 12px;
     text-transform: uppercase;
+  }
+}
+
+.color-chip-bg:hover {
+  transform: scale(0.92);
+}
+
+//  ripple
+//  ─────────────────────────────────── 
+.ripple {
+  &:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 0;
+    height: 0;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    background-color: $oc-white;
+    visibility: hidden;
+    z-index: 2;
+  }
+  
+  &:not(:active):before {
+    animation: ripple .3s cubic-bezier(0, .4, .8, 1);
+    transition: visibility .2s step-end;
+  }
+  
+  &:active:before {
+      visibility: visible;
+  }
+}
+
+//  ripple animation
+//  ───────────────────────────────────
+@keyframes ripple {
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  
+  100% {
+    width: 212px;
+    height: 212px;
+    opacity: .18;
   }
 }
 
