Use `nav` Element

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -47,7 +47,7 @@
     </script>
   </head>
   <body>
-    <div class="navigation">
+    <nav class="navigation">
       <div class="container">
         <a class="blog-logo" href="{{ site.baseurl }}/"></a>
         <div class="navbar">
@@ -99,7 +99,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
 
     <div class="container">
       <section class="cover">
